# Cbject

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.adoc  README.md  project.yml
.github/: FUNDING.yml
.github/workflows/: ci.yml
doc/: Cbject.adoc  index.adoc  index.html
docs/: CNAME  Cbject.adoc  docinfo.html  index.adoc  index.html  theme-dark.css
src/: Application.c  Application.h  Circle.c  Circle.h  Color.h  ColoredCircle.c  ColoredCircle.h  Point.h  Primitives.h  Rectangle.c  Rectangle.h  Shape.c  Shape.h  main.c
src/App/: App.c  App.h
src/Application/: Application.c  Application.h  Circle.c  Circle.h  Color.h  ColoredCircle.c  ColoredCircle.h  Point.h  Rectangle.c  Rectangle.h  Shape.c  Shape.h
src/CO/: CO.c  CO.h  COSettings.h  COUtilities.h  super_CO.h
src/CObject/: CObject.c  CObject.h  CObjectSettings.h  CObjectSuper.h  CObjectUtilities.h  Primitives.h
src/Cbj/: Cbj.h  Cbj_Base.c  Cbj_Base.h  Cbj_PrimitiveTypes.h  Cbj_Settings.h  Cbj_StaticAssert.h  Cbject.c  Cbject.h
src/Cbject/: Any.h  Assert.h  Cbject.c  Cbject.h  CbjectAbstractKlass.h  CbjectAbstractKlassDeclaration.h  CbjectDefaultGetter.h  CbjectDefaultGetterImpl.h  CbjectDefaultGetters.h  CbjectDefaultSetter.h  CbjectDefaultSetterImpl.h  CbjectDefaultSetters.h  CbjectFunction.h  CbjectFunctionPrototype.h  (+181 more)
test/: test_Cbject_Object.c  test_Circle.c  test_Class.c  test_ColoredCircle.c  test_Interface.c  test_Object.c  test_Rectangle.c  test_Rectanglex.c  test_Trait.c  test_Type.c  test_cbject_LinkedList.c  test_cbject_Node.c  test_cbject_Object.c
(+378 files in other folders)
